--- a/etc/init/code-server.conf
+++ b/etc/init/code-server.conf
@@ -1,5 +1,5 @@
-start on started system-services
-stop on stopping system-services
+start on started login
+stop on stopping logout
 respawn
 
 exec sudo -u chronos PATH=/usr/local/bin:/usr/bin:/bin:/opt/bin LD_LIBRARY_PATH=/usr/local/lib64 /usr/local/lib/code-server/node /usr/local/lib/code-server
